# intel-3

./: .env  .gitignore  README.md  chat.py  chat2.py  main.py  main2.py  pyproject.toml  read.txt  requirements.txt  server.py
data/chroma_db/: chroma.sqlite3
engine/: chunker.py  retriever.py  retriever2.py  vector_db.py
engine/chunkers/: chunker2.py  chunker3.py  chunker4.py
engine/retrievers/: retriever2.py  retriever3.py  retriever4.py  retriever5.py
parsers/: all_parser.py  all_parser2.py  all_parser3.py  all_parser4.py  all_parser5.py  all_parser6.py  all_parser7.py  all_parser8.py  pdf_parser.py  pdf_parser2.py
tests/: ai_test.py  check_db.py  output_test.py
